<resources>
    <string name="app_name">MEdit</string>
    <string name="app_detail">Media Editor</string>
    <string name="cd_iv_medit_logo">logo medit (media editor)</string>
    <string name="sub_image_editor">Image Editor</string>
    <string name="label_resize">Resize</string>
    <string name="sub_audio_editor">Audio Editor</string>
    <string name="label_compress">Compress</string>
    <string name="label_coming_soon">Soon..</string>
    <string name="label_rotate">Rotate</string>
    <string name="label_flip">Flip</string>
    <string name="label_image">Image</string>
    <string name="label_audio">Audio</string>
    <string name="cd_iv_image_preview">image preview</string>
    <string name="label_input_resize">Ubah size menjadi:</string>
    <string name="about">by\nMuhammad Rihap Firdaus</string>
    <string name="label_panjang">Panjang (px)</string>
    <string name="label_lebar">Lebar (px)</string>
    <string name="label_edit_gambar">Edit Gambar</string>
    <string name="toast_failed_pick_image">Gagal mengambil gambar</string>
    <string name="toast_pick_image_first">Pilih foto terlebih dahulu</string>
    <string name="label_input_rotate">Rotasikan dengan sudut:</string>
    <string name="label_sudut">Sudut</string>
    <string name="label_input_flip">Flip secara:</string>
    <string name="label_ubah_gambar">Ganti Gambar</string>
    <string name="cd_back_button">kembali ke menu</string>
    <string name="toast_pick_new_image">Pilih gambar baru</string>
    <string name="toast_cancel_edit">Proses edit dibatalkan</string>
    <string name="toast_complete_form_first">Isi form terlebih dahulu</string>
    <string name="label_save_gambar">Simpan Gambar</string>
    <string name="result">Hasil Edit</string>
    <string name="toast_file_saved">File telah disimpan di galeri</string>
    <string name="toast_file_not_saved">File tidak tersimpan</string>
    <string name="share_intent_message_image">Eh ini hasil %1$s image pake aplikasi MEdit loh, yuk cobain juga!!</string>
    <string name="cd_share">bagikan hasil edit</string>
    <string name="toast_pick_audio_first">Pilih audio terlebih dahulu</string>
    <string name="subtitle_input_file_info">Input file info:</string>
    <string name="tv_audio_compress_bitrate">Kompress dengan bitrate:</string>
    <string name="label_compress_audio">Kompress audio</string>
    <string name="label_save_audio">Simpan Audio</string>
    <string name="tv_info_audio">Path: path-to-your-music\nFile name: name of your music\nSize: size of your music\nBitrate: bitrate of your music</string>
    <string name="subtitle_output_file_info">Output file info:</string>
    <string name="toast_failed_pick_audio">Gagal mengambil audio</string>
    <string name="toast_ask_for_permission">Izinkan akses media audio untuk menggunakan fitur ini.</string>
    <string name="toast_permission_denied">Izin tidak diberikan</string>
    <string name="toast_begin_compression">Proses kompresi dimulai, mohon jangan tutup aplikasi</string>
    <string name="toast_pick_bitrate_first">Pilih bitrate terlebih dahulu</string>
    <string name="toast_compression_succes">Proses kompresi telah selesai</string>
    <string name="toast_compression_failed">Kompresi gagal</string>
    <string name="tv_input_audio_info">File name: %1$s\nUkuran File: %2$s</string>
    <string name="tv_output_audio_info">Ukuran File: %1$s\nBitrate: %2$s</string>
    <string name="toast_audio_save_success">File disimpan di Music\\Medit</string>
    <string name="toast_audio_save_failed">Gagal menyimpan file</string>
</resources>