<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:padding="16dp"
    tools:context=".EditImageActivity">

    <LinearLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/iv_image_preview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/bg_button"
            android:backgroundTint="?attr/colorMain"
            android:contentDescription="@string/cd_back_button"
            android:src="@drawable/ic_back"
            app:tint="?attr/colorOnPrimary" />

        <TextView
            style="@style/Subtitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:backgroundTint="?attr/colorMain"
            android:gravity="center"
            android:text="@string/sub_image_editor" />
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_image_preview"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="12dp"
        android:background="?attr/colorMain"
        android:contentDescription="@string/cd_iv_image_preview"
        android:maxHeight="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar" />

    <LinearLayout
        android:id="@+id/input_resize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_image_preview">

        <TextView
            android:id="@+id/tv_image_resize"
            style="@style/Subtitle"
            android:layout_width="match_parent"
            android:text="@string/label_input_resize" />

        <EditText
            android:id="@+id/et_image_resize_width"
            style="@style/Input"
            android:hint="@string/label_lebar"
            android:importantForAutofill="no"
            android:inputType="number" />

        <EditText
            android:id="@+id/et_image_resize_height"
            style="@style/Input"
            android:hint="@string/label_panjang"
            android:importantForAutofill="no"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/input_rotate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_image_preview">

        <TextView
            android:id="@+id/tv_image_rotate"
            style="@style/Subtitle"
            android:layout_width="match_parent"
            android:text="@string/label_input_rotate" />

        <EditText
            android:id="@+id/et_image_rotate_degree"
            style="@style/Input"
            android:hint="@string/label_sudut"
            android:importantForAutofill="no"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/input_flip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_image_preview">

        <TextView
            android:id="@+id/tv_image_flip"
            style="@style/Subtitle"
            android:layout_width="match_parent"
            android:text="@string/label_input_flip" />

        <Spinner
            android:id="@+id/spnr_image_flip"
            style="@style/Input" />
    </LinearLayout>


    <Button
        android:id="@+id/btn_edit_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorMain"
        android:padding="12dp"
        android:text="@string/label_edit_gambar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_save_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorMain"
        android:padding="12dp"
        android:text="@string/label_save_gambar"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>