<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:padding="16dp"
    tools:context=".EditAudioActivity">

    <LinearLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/ll_input_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/bg_button"
            android:backgroundTint="?attr/colorMain"
            android:contentDescription="@string/cd_back_button"
            android:src="@drawable/ic_back"
            app:tint="?attr/colorOnPrimary" />

        <TextView
            style="@style/Subtitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:backgroundTint="?attr/colorMain"
            android:gravity="center"
            android:text="@string/sub_audio_editor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_input_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/ll_audio_compressor_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar">

        <TextView
            android:id="@+id/tv_head_input_info"
            style="@style/Subtitle"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/subtitle_input_file_info" />

        <TextView
            android:id="@+id/tv_input_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="5dp"
            tools:text="@string/tv_info_audio" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_audio_compressor_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/ll_output_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_input_info">

        <TextView
            android:id="@+id/tv_head_input_compress"
            style="@style/Subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tv_audio_compress_bitrate" />

        <Spinner
            android:id="@+id/spnr_audio_compressor"
            style="@style/Input" />

        <Button
            android:id="@+id/btn_compress_audio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorMain"
            android:text="@string/label_compress_audio" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_output_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_audio_compressor_input">

        <TextView
            android:id="@+id/tv_head_output_info"
            style="@style/Subtitle"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/subtitle_output_file_info" />

        <TextView
            android:id="@+id/tv_output_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="5dp"
            tools:text="@string/tv_info_audio" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_save_audio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorMain"
        android:text="@string/label_save_audio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>